update measureType
